--- a/layout editor.html
+++ b/layout editor.html
@@ -8,9 +8,10 @@
   <nav>
     <div id="fileName">Untitle.ini </div>
     <div class='action button' id="openFile" onclick="loadFile()"> L<span>o</span>ad <i class="fas fa-upload"></i> </div>
+    <div class='action button' onclick="saveFile()"> Download <i class="fas fa-download"></i> </div>
     <div class='action button' onclick="showHidePanel('layout')"> <span>L</span>ayout <i class="fas fa-columns"></i> </div>
     <div class='action button' onclick="showHidePanel('layer')"> <span>L</span>ayer <i class="fas fa-layer-group"></i> </div>
-    <div class='action button' onclick="saveFile()"> Download <i class="fas fa-download"></i> </div>
+    <div class='action button' onclick="showHidePanel('settings')"> Sett<span>i</span>ng <i class="fas fa-cog"></i> </div>
   </nav>
   <div class="side" id="layoutPanel">
     <div id="floatpad">Float</div>
@@ -29,6 +30,18 @@
 
   <div class="side" id="layerPanel"> </div>
   <div id="canvas">
+  </div>
+  <div class="float" id="settingsPanel">
+    <div>
+      <div>
+        <label for="setting_snap_pos">Snap tiles
+          <i class="fas fa-question-circle"></i>
+          <span class='info'>Whether to snap tiles to 5%</span>
+        </label>
+        <input type="checkbox" id="setting_snap_pos" onChange="setSettings('snapPos',this)"/>
+      </div>
+
+    </div>
   </div>
 
 
