Make cancel focus available by clicking tile or side panel

--- a/layout editor.html
+++ b/layout editor.html
@@ -2,6 +2,7 @@
 <head>
   <title>Layout Editor</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
@@ -50,4 +51,5 @@
   <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <script src="./jquery.ui.touch-punch.js"></script>
   <script src="./main.js"> </script>
+  <script src="./pointer.js"> </script>
 </body>
